Adjust padding and update success message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             align-items: center;
             /* 改成靠下對齊，然後往上推 */
             justify-content: flex-end; 
-            padding-bottom: 60vh; /* 距離底部 25% 的高度，這就是你要的中偏下 */
+            padding-bottom: 25vh; /* 距離底部 25% 的高度，這就是你要的中偏下 */
             box-sizing: border-box;
             z-index: 10;
         }
@@ -112,7 +112,7 @@
         
         <div id="success-layer">
             <h1 style="font-size: 30px; margin: 0;">☀️</h1>
-            <h2 style="margin-top: 20px;">你就是自己的太陽</h2>
+            <h2 style="margin-top: 20px;">Just Smile 😊</h2>
 
             <div class="btn-group">
                 <button class="btn-restart" onclick="restartGame()">
@@ -285,7 +285,7 @@
         successLayer.style.display = 'flex';
         uiLayer.style.display = 'none';
 
-        const duration = 5000;
+        const duration = 2500;
         const end = Date.now() + duration;
         (function frame() {
             confetti({ particleCount: 5, angle: 60, spread: 55, origin: { x: 0 }, colors: ['#FFF', '#FFD700'] });
