--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             flex-direction: column;
             align-items: center;
             /* 改成靠下對齊，然後往上推 */
-            justify-content: flex-end; 
-            padding-bottom: 25vh; /* 距離底部 25% 的高度，這就是你要的中偏下 */
+            justify-content: flex-start; 
+            padding-top: 40vh; /* 避開瀏海與頂部資訊列 */
+            justify-content: flex-start; 
+            padding-top: 80vh; /* 這是你設定的位置 */
             box-sizing: border-box;
             z-index: 10;
         }
